	* SVG file format import added (using librsvg; requires GTK+ 2.4 or later)
	* Better support for loading CMYK TIFF files as RGB/RGBA
	* ICC colour profiles embedded in PNG, JPEG and TIFF images now can be applied on load (using LittleCMS)
	* JPEG2000 file format support now can be compiled with either JasPer or OpenJPEG library
	* GIF loader made more tolerant to truncated or malformed GIF files
	* "Palette->Open" now can extract palette from indexed images in any supported file format
	* "Scale Canvas" now has 3 boundary extension modes - Mirror, Tile, Void
	* Filename and modified status now part of undo system
	* Transparent colour now part of undo system
	* Palette sorting, dragging a colour, or removing duplicate colours now do not lose transparent colour
	* New keyboard shortcuts added - J for lasso tool, D for line tool, F for flood fill tool
	* Toolbar and menu icons are now themeable (Preferences->Paths->Default Theme)
	* Command line globbing now possible using -w option, e.g. mtpaint -w "*.jpg"
	* Loading default settings from /etc/mtpaint/mtpaintrc is now supported in Windows version
	* Name and location of user settings file is now configurable : See handbook section A.6.4 for details
	* "Smart grid" and gamma correction are now enabled by default
	* "Selective error propagation" for dithering is now at 85% by default
	* Drawing and fill tools now are 2-3 times faster
	* Support for compiling with libpng 1.4, libjpeg 8a, and zlib 1.2.5 added
	* Configure script rewritten, now understands standard variables and options for installation paths and (cross-)compilation settings
	* Minimum required GTK+2 version now can be specified as configure option (e.g., "./configure gtk2.8")
	* Workaround for bug in GTK+ versions 2.14.0 - 2.14.2, 2.16.0, 2.16.1 added (spin buttons had wrong max values)
	* Workaround for unknown problem in GTK+ version 2.24.4 added (program locked up when trying to save a file when layers list is active)